# math-homework

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  hw-001.f  hw-002.f
